--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,13 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# OS X compilation
+SDLMain.h
+SDLMain.m
+
+# Built files
+chip8
+chip8.data
+chip8.js
+chip8.wasm
