--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "background_color": "#fafafa",
     "display": "standalone",
     "scope": "/",
-    "start_url": "/",
+    "start_url": "/index.html",
     "icons": [
         {
             "src": "/images/icon_29.png",
