--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "CHIP-8",
-    "short_name": "CHIP-8",
+    "short_name": "CHIP8",
     "theme_color": "#1976d2",
     "background_color": "#fafafa",
     "display": "standalone",
@@ -8,74 +8,44 @@
     "start_url": "/index.html",
     "icons": [
         {
-            "src": "/images/icon_29.png",
-            "type": "image/png",
-            "sizes": "29x29"
+          "src": "images/icons/icon-72x72.png",
+          "sizes": "72x72",
+          "type": "image/png"
         },
         {
-            "src": "/images/icon_40.png",
-            "type": "image/png",
-            "sizes": "40x40"
+          "src": "images/icons/icon-96x96.png",
+          "sizes": "96x96",
+          "type": "image/png"
         },
         {
-            "src": "/images/icon_50.png",
-            "type": "image/png",
-            "sizes": "50x50"
+          "src": "images/icons/icon-128x128.png",
+          "sizes": "128x128",
+          "type": "image/png"
         },
         {
-            "src": "/images/icon_57.png",
-            "type": "image/png",
-            "sizes": "57x57"
+          "src": "images/icons/icon-144x144.png",
+          "sizes": "144x144",
+          "type": "image/png"
         },
         {
-            "src": "/images/icon_58.png",
-            "type": "image/png",
-            "sizes": "58x58"
+          "src": "images/icons/icon-152x152.png",
+          "sizes": "152x152",
+          "type": "image/png"
         },
         {
-            "src": "/images/icon_72.png",
-            "type": "image/png",
-            "sizes": "72x72"
+          "src": "images/icons/icon-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
         },
         {
-            "src": "/images/icon_76.png",
-            "type": "image/png",
-            "sizes": "76x76"
+          "src": "images/icons/icon-384x384.png",
+          "sizes": "384x384",
+          "type": "image/png"
         },
         {
-            "src": "/images/icon_80.png",
-            "type": "image/png",
-            "sizes": "80x80"
-        },
-        {
-            "src": "/images/icon_100.png",
-            "type": "image/png",
-            "sizes": "100x100"
-        },
-        {
-            "src": "/images/icon_114.png",
-            "type": "image/png",
-            "sizes": "114x114"
-        },
-        {
-            "src": "/images/icon_120.png",
-            "type": "image/png",
-            "sizes": "120x120"
-        },
-        {
-            "src": "/images/icon_144.png",
-            "type": "image/png",
-            "sizes": "144x144"
-        },
-        {
-            "src": "/images/icon_152.png",
-            "type": "image/png",
-            "sizes": "152x152"
-        },
-        {
-            "src": "/images/icon_512.png",
-            "type": "image/png",
-            "sizes": "512x512"
+          "src": "images/icons/icon-512x512.png",
+          "sizes": "512x512",
+          "type": "image/png"
         }
     ]
 }
